# custos

./: ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.txt  BUILD_STATUS.md  CODEBASE_ANALYSIS.md  DEVELOPMENT_ROADMAP.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PLAN.md  INDUSTRY_COMPARISON.md  LICENSE  NETWORK_SECURITY_COMPLETE.md  NETWORK_SECURITY_PROGRESS.md  PORTAL_IMPLEMENTATION_PLAN.md  PROGRESS_SUMMARY.md  README.md  ROADMAP_TO_ENTERPRISE.md  SECURITY.md  THREAT_PORTAL_MISSING_FEATURES.md  WEEK1_PROGRESS.md  WEEK2_PROGRESS.md  index.html  launch-system-monitor.sh  package-lock.json  package.json  test.html  vite.config.ts
src/: AppWrapper.tsx  BasicTest.tsx  MinimalTest.tsx  SimpleTest.tsx  TestApp.tsx  index.css  main.tsx
src-ml/: QUICKSTART.md  README.md  requirements.txt  setup_dgx.sh
src-ml/data/loaders/: sorel_loader.py
src-ml/scripts/: download_yara_rules.py  train_neural_net.py  train_xgboost.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hardware_detector.rs  keychain.rs  lib.rs  main.rs  monitoring.rs  ollama.rs  sudo_auth.rs
src-tauri/src/ai_analysis/: analyzer.rs  mod.rs  report_export.rs  report_generator.rs  reports.rs
src-tauri/src/malware/: behavioral_engine.rs  credential_theft_detector.rs  exploit_detector.rs  file_monitor.rs  incident_response.rs  memory_scanner.rs  mitre_attack.rs  ml_inference.rs  mod.rs  network_analyzer.rs  process_injection.rs  quarantine.rs  ransomware_protection.rs  rootkit_detector.rs  sandbox.rs  scanner.rs  signature_db.rs  signature_init.rs  threat_intel.rs
src-tauri/src/monitoring/: ebpf_monitor.rs  ebpf_syscall_monitor.rs  high_perf_monitor.rs  kernel_monitor.rs  linux_ebpf.rs  pci_devices.rs  platform_security.rs  proc_syscall_monitor.rs  ultra_perf_monitor.rs  windows_etw.rs
src-tauri/src/network/: connection_history.rs  dns_analyzer.rs  geoip.rs  isolation.rs  mod.rs  segmentation.rs
src-tauri/src/sensors/: events.rs  file_sensor.rs  identity_sensor.rs  mod.rs  network_sensor.rs  package_sensor.rs  persistence_sensor.rs  process_sensor.rs
src-tauri/src/storage/: mod.rs  queries.rs  schema.rs
src-tauri/src/threat_detection/: ai_analyzer.rs  alerts.rs  behavioral.rs  engine.rs  mod.rs  signatures.rs  threat_intel.rs
src-tauri/src/vulnerability/: comprehensive_scanner.rs  database.rs  misconfig.rs  mod.rs  prioritizer.rs  scanner.rs
src/components/: AIAnalysisSection.tsx  Dashboard.tsx  DraggableDashboard.tsx  Header.tsx  ScanProgressIndicator.tsx  Sidebar.tsx
src/contexts/: ScanContext.tsx
src/services/: highPerfService.ts  kernelService.ts  tauriDetector.ts
src/types/: ai-analysis.ts  index.ts  reports.ts
(+24 files in other folders)
