[package]
name = "custos"
version = "0.1.0"
description = "Custos - Advanced Cybersecurity Platform"
authors = ["NexGen Tech AI"]
license = "UNLICENSED"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"  # Binary serialization for zero-copy IPC
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
os_info = "3.7"
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
async-trait = "0.1"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"  # Connection pooling
r2d2_sqlite = "0.24"  # SQLite connection pool manager
keyring = "2.3"  # Secure credential storage
nvml-wrapper = { version = "0.11", optional = true }
crossbeam = "0.8"  # Lock-free data structures
dashmap = "5.5"    # Concurrent HashMap
parking_lot = "0.12"  # Fast locks
rayon = "1.8"      # Parallel processing
num_cpus = "1.16"  # CPU detection
libc = "0.2"       # System calls
cfg-if = "1.0"     # Conditional compilation

# High-Performance Monitoring Dependencies
memmap2 = "0.9"  # Memory mapping for zero-copy
ringbuf = "0.3"  # Lock-free ring buffer
thiserror = "1.0"  # Error handling
tracing = "0.1"  # Structured logging
tracing-subscriber = "0.3"  # Logging subscriber

# Malware Detection Dependencies
notify = "6.1"  # File system monitoring
aes-gcm = "0.10"  # Encryption for quarantine
md5 = "0.7"  # MD5 hashing
rand = "0.8"  # Random number generation
base64 = "0.21"  # Base64 encoding
log = "0.4"  # Logging

[features]
default = []
nvidia = ["nvml-wrapper"]

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["mman"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Diagnostics_Etw",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
] }
wmi = "0.13"  # WMI queries for services/tasks

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3  # Changed from "s" to 3 for maximum performance
strip = true

[profile.dev]
opt-level = 1  # Faster debug builds

